fix bug animation on mobile in standarts section (#44)

--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -1,28 +1,28 @@
 .popup {
-  display: none;
-  width: 680px;
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   z-index: 2;
-  background-color: #f5f5f5;
+  display: none;
+  width: 680px;
   color: #4c5056;
+  background-color: #f5f5f5;
   border: none;
   border-radius: 15px;
+  transform: translate(-50%, -50%);
 }
 
 .popup-bg {
-  display: none;
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1;
+  display: none;
   width: 100vw;
   height: 100vh;
-  z-index: 1;
+  background-color: rgba(0, 0, 0, .7);
   border: none;
   backdrop-filter: blur(10px);
-  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .popup-opened {
@@ -31,12 +31,12 @@
 
 .popup > form {
   position: relative;
-  padding: 40px;
-  text-align: center;
   display: flex;
   flex-direction: column;
   gap: 18px;
   width: 100%;
+  padding: 40px;
+  text-align: center;
 }
 
 .popup > form > input,
@@ -50,35 +50,36 @@
 }
 
 .popup > form > textarea {
-  resize: vertical;
   height: 70px;
+  resize: vertical;
 }
 
-.popup > form > textarea:not(:focus-within) ~ div > span.popup-note-notification,
-.popup > form > textarea:focus-within ~ div > .popup-err  {
+.popup > form > textarea:not(:focus-within) ~ div > .popup-note-notification,
+.popup > form > textarea:focus-within ~ div > .popup-err {
   display: none;
 }
 
-span.popup-note-notification, span.popup-err {
-  font-size: 1.3rem;
+.popup-note-notification,
+.popup-err {
   padding-left: 10px;
+  font-size: 1.3rem;
 }
 
-.warning, span.popup-err {
-  color: red;
+.warning,
+.popup-err {
+  color: #ff0000;
 }
 
 .popup-submit {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
 }
 
 .popup-info {
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  align-items:center;
-
 }
 
 .popup label > span {
@@ -92,45 +93,48 @@ span.popup-note-notification, span.popup-err {
 }
 
 .popup label > a:hover {
-  color: blue;
+  color: #0000ff;
 }
 
 .popup-submit > button {
   padding: 10px 20px;
+  font-weight: 700;
   color: #ffffff;
   cursor: pointer;
   background: #fac0aa;
   border: 0;
   border-radius: 15px;
-  font-weight: bold;
 }
 
 .popup-message {
-  height: 60vh;
-  width: 100%;
-  padding: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 60vh;
+  padding: 20px;
 }
 
 @media screen and (max-width: 680px) {
   .popup {
     width: 100%;
   }
+
   .popup-info {
     position: relative;
     display: block;
-    text-align: start;
     padding-bottom: 18px;
+    text-align: start;
   }
+
   .popup-info > .popup-err {
     position: absolute;
     top: 30px;
     left: 0;
   }
 }
+
 @media screen and (max-width: 420px) {
   .popup > form {
     padding: 20px;
@@ -139,5 +143,4 @@ span.popup-note-notification, span.popup-err {
   .popup-info {
     padding-bottom: 34px;
   }
-  
 }
